--- a/views/shared.handlebars
+++ b/views/shared.handlebars
@@ -22,24 +22,24 @@
 	<div class = "pot" style="width:100%">
 		<img src = "/images/plant.png" style="width:40%">
 		
-		<div class = "inLine">
-			<div class = "right">
+		<div class = "row">
+			<div class = "col-md-3">
 				<h4>{{friendName}}:</h4>
 				<h5>{{friendScore}}/8</h5>
 			</div>
-			<div class = "left">
+			<div class = "col-md-3">
 				<h4>You:</h4>
 				<h5>{{userScore}}/8</h5>
 			</div>
 		</div>
-		 <a href="/archive"><button style="width:30%">Past Plants</button></a>
+		 <a href="/archive"><button style="width:30%" class="btn btn-default">Past Plants</button></a>
 	</div>
 
 
 
 	  <div class="btn-group" style="width:100%">
-      		<a href="/sip"><button style="width:19%">Sip</button></a>
-      		<a href="/friends"><button style="width:19%">Friends</button></a>
+      		<a href="/sip"><button style="width:19%" class="btn btn-default">Sip</button></a>
+      		<a href="/friends"><button style="width:19%" class="btn btn-default">Friends</button></a>
   		</div>
 	</div>
   <script src="https://code.jquery.com/jquery.js"></script>
