--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -338,12 +338,19 @@ a:focus {
 
 img {
   vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1%;
 }
 
 .img-responsive {
   display: block;
-  height: auto;
+  height: 40%;
+  width: auto;
   max-width: 100%;
+  padding: 1%
+  margin-bottom: 200%;
+  margin-top: 10%;
 }
 
 .img-rounded {
@@ -786,6 +793,13 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  text-align: center;
+  height: 100%;
+  width: 50%;
+
+
+  
+
 }
 
 .container:before,
@@ -806,71 +820,30 @@ pre code {
 
 .container:after {
   clear: both;
-}
-
-@media (max-width: 650px) {
-  .container {
-    text-align: center;
-    border: 3px solid green;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;
-    width: 100%;
-  }
-}
-
-@media (min-width: 700px) {
-  .container {
-    text-align: center;
-    border: 3px solid green;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;
-    width: 100%;
-  }
 }
 
 @media (min-width: 768px) {
   .container {
-    text-align: center;
-    border: 3px solid green;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;
-    width: 50%;
+    width: 750px;
   }
 }
 
 @media (min-width: 992px) {
   .container {
-    text-align: center;
-    border: 3px solid green;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;
-    width: 50%;
+    width: 970px;
   }
 }
 
 @media (min-width: 1200px) {
   .container {
-    text-align: center;
-    border: 3px solid green;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;
-    width: 50%;
+    width: 1170px;
   }
 }
 
 .row {
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: auto;
+  margin-left: auto;
+
 }
 
 .row:before,
@@ -2737,6 +2710,9 @@ input[type="button"].btn-block {
   font-weight: normal;
   line-height: 1;
   -moz-osx-font-smoothing: grayscale;
+  padding-right: 5%;
+  padding-left: 5%;
+  border-right: 1px;
 }
 
 .glyphicon:empty {
@@ -3687,12 +3663,20 @@ input[type="button"].btn-block {
   }
 }
 
+.btn-group {
+  width: 100%;
+}
+
+.btn-group, .fillbtn {
+
+  width: 19%;
+}
+
 .btn-group,
 .btn-group-vertical {
-  position: absolute;
-  bottom: 3;
-  /*display: inline-block;*/
-  vertical-align: left;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .btn-group > .btn,
@@ -4484,13 +4468,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-left: -15px;
 }
 
-/*@media (min-width: 768px) {
+@media (min-width: 768px) {
   .container > .navbar-header,
   .container > .navbar-collapse {
     margin-right: 0;
     margin-left: 0;
   }
-}*/
+}
 
 .navbar-static-top {
   z-index: 1000;
