--- a/views/sip.handlebars
+++ b/views/sip.handlebars
@@ -6,9 +6,11 @@
   <!-- gives browser instructions on how to control
   page dimensions and scaling -->
 
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <link href="css/plant.css" rel="stylesheet">
+ 
+  <link href="/css/bootstrap.css" rel="stylesheet">
+  <link href="/css/bootstrap-theme.css" rel="stylesheet">
+  <!-- <link href="/css/plant.css" rel="stylesheet">
+  <link href="css/hydration.css" rel="stylesheet"> -->
 
   <script src="js/jquery-1.11.0.js"></script>
   <script src="/js/bootstrap.min.js"></script>
@@ -16,22 +18,22 @@
 </head>
 <body>
   <div class="container">
-    <h2><i class="arrow leftArrow" onclick="history.back(-1)"></i>Sip</h2>
-    <hr size="150">
+    <h2><i class="arrow leftArrow glyphicon glyphicon-arrow-left" onclick="history.back(-1)"></i>Sip</h2>
+    <hr size="50">
 
-    <div class="cup sip-tracker" id="0" style="width:100%">
-      <img src="/images/Cup0.png" style="width:40%" ... />
+    <div class="cup sip-tracker" id="0">
+      <img class= "img-responsive" src="/images/Cup0.png" ... />
     </div>
 
-    <form id="addFriendForm" role="form" method="get" action="/update">
+    <form id="addFriendForm" role="form" method="get" action="/update" class="sipBtn">
         <input type="submit" id="submitBtn" class="btn btn-default" value="Take a Sip!"></input>
       </form>
 
-    <div class="btn-group" style="width:100%">
-      <a href="sip"><button class="fillbtn" style="width:19%">Sip</button></a>
-      <a href="friends"><button class="fillbtn" style="width:19%">Friends</button></a>
-    </div>
+   <div class="row">
+      <a href="sip"><button class="btn btn-default col-md-6" >Sip</button></a>
+      <a href="friends"><button class="btn btn-default col-md-6" >Friends</button></a>
   </div>
+</div>
 
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src= "js/bootstrap.js"></script>
