--- a/views/sip.handlebars
+++ b/views/sip.handlebars
@@ -33,16 +33,16 @@
 
     <!-- nav bar -->
       <div class = "navbar-fixed-bottom" style="background: orange;">
-            <ul class = "nav navbar-nav col-centered">
+            <ul class = "nav navbar-nav">
               <div class="row">
-                <div class="container">
-                  <div class="sipRight col-md-6 col-sm-6 col-xs-6">
+                <!-- <div class="container"> -->
+                  <div class="glyphicon glyphicon-tint sipRight col-md-6 col-sm-6 col-xs-6">
                     <li><a href="sip">Sip</a></li>
                   </div>
-                  <div class="friendsRight col-md-6 col-sm-6 col-xs-6">
+                  <div class="glyphicon glyphicon-leaf friendsRight col-md-6 col-sm-6 col-xs-6">
                     <li><a href="friends">Friends</a></li>
                   </div>
-                </div>
+               <!-- </div> -->
               </div>
             </ul>
          </div>
