--- a/views/shared.handlebars
+++ b/views/shared.handlebars
@@ -20,7 +20,7 @@
 	<h1>{{friendName}}</h1>
 
 	<div class = "pot" style="width:100%">
-		<img src = "/images/plant.png" style="width:40%">
+		<img src = "/images/seed.png">
 		
 		<div class = "row">
 			<div class = "col-md-3">
