--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6,6 +6,11 @@
 
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 
+* {
+background-color: #D5DFB9;
+
+}
+
 article,
 aside,
 details,
@@ -45,6 +50,7 @@ html {
 
 body {
   margin: 0;
+  background-color: #d5dfb9;
 }
 
 a {
@@ -58,6 +64,7 @@ a:focus {
 a:active,
 a:hover {
   outline: 0;
+  color: #F2FED1;
 }
 
 h1 {
@@ -79,9 +86,10 @@ dfn {
 }
 
 hr {
-  height: 0;
+  height: 1px;
   -moz-box-sizing: content-box;
        box-sizing: content-box;
+       color: #4c7c2e;
 }
 
 mark {
@@ -320,7 +328,7 @@ textarea {
 }
 
 a {
-  color: #428bca;
+  color: #4c7c2e;
   text-decoration: none;
 }
 
@@ -341,6 +349,8 @@ img {
   margin-left: auto;
   margin-right: auto;
   padding: 1%;
+  height: 60%;
+  width: auto;
 }
 
 .img-responsive {
@@ -4511,6 +4521,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
   bottom: 0;
   margin-bottom: 0;
   border-width: 1px 0 0;
+  background-color: #4c7c2e;
+}
+
+a.navbar-fixed-bottom {
+color: #D5DFB9;
+text-align: center;
 }
 
 .navbar-brand {
