--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -33,7 +33,7 @@
 				{{else}}
 				<div onclick="location.href= '/shared/{{name}}' ">
 					<h3 class="friend" style="float: left;">
-						{{name}}  <img class="img-responsive friend-pager" style="padding: 20px;" src="/images/plant.png" ... />
+						{{name}}  <img class="img-responsive friend-pager" style="padding: 20px;" src="/images/seed.png" ... />
 					</h3>
 				</div>
 				{{/if}}
