--- a/views/sip.handlebars
+++ b/views/sip.handlebars
@@ -30,20 +30,12 @@
         <input type="submit" id="submitBtn" class="btn btn-default" value="Take a Sip!"></input>
       </form>
 <!-- nav bar -->
-      <div class = "navbar-fixed-bottom">
-            <ul class = "nav navbar-nav">
-              <div class="row">
-                <!-- <div class="container"> -->
-                  <div class="glyphicon glyphicon-tint  col-md-6">
-                    <li><a href="sip">Sip</a></li>
-                  </div>
-                  <div class="glyphicon glyphicon-leaf col-md-6">
-                    <li><a href="friends">Friends</a></li>
-                  </div>
-               <!-- </div> -->
-              </div>
-            </ul>
-         </div>
+  <nav class="navbar navbar-default navbar-fixed-bottom" style="background: #738e71;">
+      <div class = "row">
+        <button type="button" class="glyphicon glyphicon-tint btn navbar-btn col-md-6 col-sm-6 col-xs-6">Sip</button>
+        <button type="button" class="btn navbar-btn col-md-6 col-sm-6 col-xs-6">Friends</button>
+      </div>
+  </nav>
       
     <!-- button
     <div class="col-md-12 col-xs-12 col-centered">
