--- a/views/sip.handlebars
+++ b/views/sip.handlebars
@@ -19,31 +19,31 @@
 </head>
 <body>
   <div class="text-center">
-    <h2><i class="arrow leftArrow glyphicon glyphicon-arrow-left" onclick="history.back(-1)"></i>Sip</h2>
-    <hr>
-
-    <div class="cup sip-tracker" id="0">
+    <div class="col">
+      <h1><i class="paddingThatArrow glyphicon glyphicon-arrow-left" onclick="history.back(-1)"></i>Sip</h1>
+    </div>
+      <hr>
+    <div class="cup sip-tracker moveBottleUp" id="0">
       <img class= "img-responsive" src="/images/Cup0.png" ... />
     </div>
 
+      <h3>Drink 8 cups of water a day to grow your plant!</h3>
+
     <form id="addFriendForm" role="form" method="get" action="/update" class="sipBtn">
-        <input type="submit" id="submitBtn" class="btn btn-default" value="Take a Sip!"></input>
-      </form>
+        <input type="submit" id="submitBtn" class="paddingBetween btn btn-default sipButtonPad" value="Take a Sip!"></input>
+    </form>
+
+
 <!-- nav bar -->
-  <nav class="navbar navbar-default navbar-fixed-bottom" style="background: #738e71;">
+  <nav class="borderingNav navbar navbar-default navbar-fixed-bottom" style="background: #D5DFB9">
       <div class = "row">
-        <button type="button" class="glyphicon glyphicon-tint btn navbar-btn col-md-6 col-sm-6 col-xs-6">Sip</button>
-        <button type="button" class="btn navbar-btn col-md-6 col-sm-6 col-xs-6">Friends</button>
-      </div>
+        
+          <a href="/sip"><button type="button" class="thatPadding btn navbar-btn button1 col-md-6 col-sm-6 col-xs-6">Sip</button></a>
+          <a href="/friends"><button type="button" class="thatPadding btn navbar-btn button1 col-md-6 col-sm-6 col-xs-6">Friends</button></a>
   </nav>
-      
-    <!-- button
-    <div class="col-md-12 col-xs-12 col-centered">
-      <a href="sip"><button class="btn btn-default col-md-6" >Sip</button></a>
-      <a href="friends"><button class="btn btn-default col-md-6" >Friends</button></a>
-    -->
 
   </div>
+</div>
 
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src= "js/bootstrap.js"></script>
