--- a/public/css/newCSS.css
+++ b/public/css/newCSS.css
@@ -46,6 +46,25 @@
 
 }
 
+.friendContainer img:hover {
+  border: 2px solid whites;
+  cursor: pointer;
+
+}
+
+.plantContainer {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  height: 100%;
+
+}
+
+
+
+
 .plantChange {
   display: inline-block;
 }
