--- a/views/sip.handlebars
+++ b/views/sip.handlebars
@@ -23,14 +23,15 @@
       <h1><i class="paddingThatArrow glyphicon glyphicon-arrow-left" onclick="history.back(-1)"></i>Sip</h1>
     </div>
       <hr>
+
     <div class="cup sip-tracker moveBottleUp" id="0">
-      <img class= "img-responsive" src="/images/Cup0.png" ... />
+      <img class= "img-responsive plantStaySame" src="/images/Cup0.png" ... />
     </div>
 
-      <h3>Drink 8 cups of water a day to grow your plant!</h3>
+      <h4 class="moveTextUp">Drink 8 cups of water a day to grow your plant!</h4>
 
     <form id="addFriendForm" role="form" method="get" action="/update" class="sipBtn">
-        <input type="submit" id="submitBtn" class="paddingBetween btn btn-default sipButtonPad" value="Take a Sip!"></input>
+        <input type="submit" id="submitBtn" class="paddingBetween btn btn-default sipButtonPad" value="I drank one cup!"></input>
     </form>
 
 
